@@ -11,6 +11,7 @@ ChangeLog for ARQ
 + JENA-294 : improved optimization of sequeneces of OPTIONALs where the grouois only OPTIONAL and an equality filter
 + JENA-302 Add URIs for all XQuery/Xpath F&O functions for duration accessors
 + JENA-303 Add URIs for all XQuery/Xpath F&O functions where there are SPARQL functions
++ JENA-328 : implement OSGi friendly DatatypeFactory initialisation in NodeValue
 
 ==== ARQ 2.9.3
 
